<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">

<item android:icon="@drawable/ic_menu_refresh" android:title="@string/menu_item_refresh" android:id="@+id/refresh_menu_item"></item><item android:id="@+id/share_menu_item" android:title="@string/menu_item_share" android:icon="@android:drawable/ic_menu_share"></item>


<item android:title="@string/preferences_title" android:id="@+id/settings_menu_item" android:icon="@android:drawable/ic_menu_preferences"></item><item android:id="@+id/instructions_menu_item" android:title="@string/menu_item_instructions" android:icon="@android:drawable/ic_menu_help"></item><item android:title="@string/menu_item_about" android:icon="@android:drawable/ic_menu_info_details" android:id="@+id/about_menu_item"></item>
</menu>
