<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:isScrollContainer="true" android:scrollbars="vertical" android:background="@android:color/white" android:scrollbarStyle="outsideOverlay" android:fadeScrollbars="true" android:id="@+id/ScrollView01" android:layout_height="fill_parent" android:scrollbarFadeDuration="10">
<LinearLayout 
    android:orientation="vertical"
    android:layout_height="fill_parent" android:layout_width="fill_parent">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:gravity="center" android:textSize="@dimen/header_text_size" android:textStyle="bold" android:textColor="@android:color/black" android:id="@+id/header" android:paddingBottom="10dp"/>
<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:textStyle="italic" android:id="@+id/quote" android:padding="5dp" android:autoLink="web|email|map"></TextView>
<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center" android:layout_width="fill_parent" android:paddingTop="10dp"><Button android:layout_height="wrap_content" android:id="@+id/write_button" android:layout_width="fill_parent" android:text="@string/write_lesson_button_label"></Button>
<Button android:layout_height="wrap_content" 
 android:id="@+id/lessons_button" 
 android:layout_width="fill_parent" 
 android:text="@string/list_lesson_button_label">
</Button>
<Button android:layout_height="wrap_content" 
 android:id="@+id/website_button" 
 android:layout_width="fill_parent" 
 android:text="@string/website_button_label">
</Button>
<Button android:layout_height="wrap_content" 
 android:id="@+id/exit_button" 
 android:layout_width="fill_parent" 
 android:text="@string/exit_button_label">
</Button>
</LinearLayout>
<ImageSwitcher android:id="@+id/ImageSwitcher01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:paddingTop="10dp"></ImageSwitcher>

<TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="10dp"></TextView>
</LinearLayout>
</ScrollView>