<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
 xmlns:android="http://schemas.android.com/apk/res/android" 
 android:isScrollContainer="true" 
 android:scrollbars="vertical" 
 android:background="@android:color/white" 
 android:scrollbarStyle="outsideOverlay" 
 android:fadeScrollbars="true" 
 android:id="@+id/ScrollView01" 
 android:scrollbarFadeDuration="10" 
 android:layout_width="fill_parent" 
 android:layout_height="fill_parent">
 <LinearLayout 
  android:orientation="horizontal" 
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent">
  <LinearLayout 
   android:orientation="vertical" 
   android:layout_gravity="center" 
   android:layout_height="wrap_content" 
   android:layout_width="fill_parent" 
   android:paddingLeft="20dp" 
   android:paddingRight="20dp">
   <TextView 
    android:layout_height="wrap_content" 
    android:textSize="@dimen/header_text_size" 
    android:textStyle="bold" 
    android:textColor="@android:color/black" 
    android:id="@+id/header" 
    android:layout_width="wrap_content"     
    android:layout_gravity="center" android:layout_marginBottom="10dp"/>
   <LinearLayout 
    android:layout_height="wrap_content" 
    android:orientation="horizontal" 
    android:layout_width="fill_parent" 
    android:layout_gravity="center" android:paddingBottom="10dp">
    <TextView android:id="@+id/quote" 
     android:layout_alignParentLeft="true"
     android:layout_width="wrap_content" 
     android:layout_weight="1" android:layout_height="wrap_content" android:autoLink="web|email|map">
    </TextView>
    <ImageSwitcher 
     android:layout_alignParentRight="true" 
     android:layout_alignParentTop="true"
     android:id="@+id/ImageSwitcher01" 
     android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="2">
    </ImageSwitcher>
   </LinearLayout>
   <TableLayout 
    android:layout_gravity="center" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:stretchColumns="*">
    
    <TableRow>
     <Button 
      android:id="@+id/write_button" 
      android:text="@string/write_lesson_button_label">
     </Button>
     <Button 
      android:id="@+id/lessons_button" 
      android:text="@string/list_lesson_button_label">
     </Button>
    
     </TableRow>
     <TableRow>
     <Button 
      android:id="@+id/website_button" 
      android:text="@string/website_button_label">
     </Button>
     <Button 
      android:id="@+id/exit_button" 
      android:text="@string/exit_button_label">
     </Button>
    </TableRow>
   </TableLayout>
  
</LinearLayout>
 </LinearLayout>

</ScrollView>